--- a/css/style.css
+++ b/css/style.css
@@ -5,4 +5,67 @@
     padding: 0;
 }
 
+body{
+    background-color:antiquewhite;
 
+}
+
+
+#background{
+    background-color: teal;
+    height: 10vh;
+    width: 100%;
+
+
+
+}
+
+#container{
+
+    display: flex;
+    margin: -5rem auto;
+    width: 70%;
+    height: 80vh;
+    background-color: lightgrey;
+    justify-content: center;
+    align-items: stretch;
+
+
+}
+
+#leftColumn{
+    height: 100%;
+    width: 35%;
+    border: solid red 1px
+
+}
+
+
+#rightColumn{
+    height: 100%;
+    width: 65%;
+    border: solid blue 1px
+}
+
+#myAvatar{
+    height: 4rem;
+    width: 100%;
+    padding: 1rem;
+    background-color: aliceblue;
+    
+
+}
+
+.media_img_avatar{
+    height: 100%;
+    border-radius: 50%;
+}
+
+.contact_card{
+    height: 4rem;
+    width: 100%;
+    padding: 1rem;
+    
+
+    
+}
