--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     padding: 0;
 }
 
+/* body e sfondo */
 body{
     background-color:#dbdbd2;
     padding: 1rem;
@@ -12,7 +13,6 @@ body{
     font-family: sans-serif;
 
 }
-
 
 #background{
     background-color: #009688;
@@ -24,7 +24,9 @@ body{
     right: 0;
 
 }
+/* ****************** */
 
+/* finestra principale */
 #container{
 
     display: flex;
@@ -49,17 +51,17 @@ body{
 #rightColumn{
     height: 100%;
     width: 65%;
-
 }
+
+/* barre contatti superiore */
+
 
 .contactBar{
     height: 4rem;
     width: 100%;
-
     background-color: #f3eeea;
     display: flex;
     justify-content: space-between;
-    
 
 }
 
@@ -69,29 +71,41 @@ body{
     padding: 1rem;
     display: flex;
 }
+
 .contactinfo span{
     align-self: center;
 
 }
 
 
-.pulsantiera{
-    color: gray;
-    padding: 0.5rem;
-    display: flex;
-}
-.pulsantiera i{
-    margin: 0.5rem;
-    align-self: center;
-
-
-}
+/* format immagini avatar */
 .media_img_avatar{
     height: 100%;
     border-radius: 50%;
     
 }
 
+/* layout icone pulsanti */
+.pulsantiera{
+    color: gray;
+    padding: 0.5rem;
+    display: flex;
+}
+
+
+.pulsantiera i{
+    margin: 0.5rem;
+    align-self: center;
+    
+    
+}
+/* lista dei contatti laterali */
+#contactList{
+    height: calc(100% - 4rem);
+    overflow-y: auto;
+}
+
+/* schede contatti laterali */
 .contact_card{
     height: 4rem;
     width: 100%;
@@ -111,14 +125,10 @@ body{
 .textInfo p{
     font-size: small;
     color: gray;
-
+    
 }
 
-#contactList{
-    height: calc(100% - 4rem);
-    overflow-y: auto;
-}
-
+/* barre degli input */
 .inputBar{
     width: 100%;
     border: 2px solid lightgrey;
@@ -126,9 +136,8 @@ body{
     padding: 0.5rem 1rem;
     display:flex;
     border-radius: 5px;
-
+    
 }
-
 .inputBar i{
     padding: 0.5rem 0;
 }
@@ -137,14 +146,17 @@ body{
     padding: 0.5rem;
 }
 
+
+
+
+
+
+
+/* CHAT aperta */
 #activeContact{
     height: 4rem;
     width: 100%;
-
     background-color: #f3eeea;
-    
-    
-
 }
 
 #activeMessages{
@@ -152,20 +164,31 @@ body{
     overflow-y: auto;
     background: url(../img/mine.jpg) ;
     
-
 }
-
 #activeMessages ul{
     display: flex;
     flex-direction: column;
     align-content: space-between;
     list-style-type: none;
-
+    
 }
 #activeMessages li{
     position: relative;
 }
 
+#activeMessages p{
+    font-size: small;
+    color: lightgray;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: 0.2rem;
+}
+
+
+
+
+/* stile inviati o ricevuti */
 .sent{
     color: gray;
     align-self: end;
@@ -186,6 +209,9 @@ body{
     border-radius: 5px;
 }
 
+
+
+/* stile barra input nuovo messaggio */
 #newMessage{
     height: 3rem;
     width: 100%;
@@ -196,7 +222,6 @@ body{
     background-color: #f3eeea;
 }
 
-
 #messageInput{
     width: 80%;
     border-style: none;
@@ -205,13 +230,3 @@ body{
     margin: 0 1rem;
 }
 
-
-#activeMessages p{
-    font-size: small;
-    color: lightgray;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    margin: 0.2rem;
-
-}
